# CLAUDE1

./: README.md  claude1_cli.py  config.py  doctor.py  llm.py  main.py  model_profiles.py  pyproject.toml  repl.py  session.py  skills.py  stats.py  system_prompt.py  task_manager.py  undo.py
.github/workflows/: ci.yml
agents/: __init__.py  coordinator.py  orchestrator.py  tool_filter.py  types.py  worker.py
claude1/: __init__.py  __main__.py  bandit.py  cli.py  config.py  critique.py  doctor.py  hf_import.py  json_repair.py  llm.py  logging_config.py  mcp_client.py  mcp_templates.py  model_profiles.py  reflection.py  repl.py  response_quality.py  session.py  skills.py  stats.py  system_prompt.py  undo.py  video_generation.py  video_models.py  wallet.py
claude1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claude1/agents/: __init__.py  config.py  coordinator.py  file_lock.py  orchestrator.py  scratchpad.py  tool_filter.py  types.py  worker.py
claude1/self_awareness/: __init__.py  codebase_index.py  introspection.py  role_factory.py  self_modifier.py  skill_factory.py
claude1/task_engine/: __init__.py  engine.py  logger.py  store.py  time_manager.py  types.py
claude1/tools/: __init__.py  base.py  bash_tool.py  comm_tools.py  file_tools.py  (+7 more)
tests/: conftest.py  test_bash_tool.py  test_bash_undo.py  test_checkpoint.py  test_file_tools.py  test_positions.py  test_response_quality.py  test_session.py  test_transactions.py  test_undo.py
tools/: __init__.py  base.py  bash_tool.py  file_tools.py  search_tools.py  task_tool.py
ui/: prompts.py  renderer.py
(+5 files in other folders)
