[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude1"
version = "0.1.0"
description = "Local coding assistant powered by Ollama"
requires-python = ">=3.10"
dependencies = [
    "click",
    "ollama",
    "prompt_toolkit",
    "rich",
]

[project.scripts]
claude1 = "claude1_cli:cli"

[tool.setuptools]
py-modules = ["claude1_cli", "main", "config", "llm", "repl", "session", "stats", "undo", "model_profiles", "system_prompt"]

[tool.setuptools.packages.find]
include = ["tools", "tools.*", "ui", "ui.*"]
