[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude1"
version = "0.1.0"
description = "Local coding assistant powered by Ollama"
requires-python = ">=3.10"
dependencies = [
    "click",
    "huggingface_hub",
    "ollama",
    "prompt_toolkit",
    "rich",
    "diffusers>=0.30.0",
    "torch>=2.0.0",
    "torchvision",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "peft>=0.17.0",
    "imageio[ffmpeg]",
    "pillow",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
web = ["httpx>=0.27.0", "beautifulsoup4>=4.12.0"]
mcp = ["mcp>=1.0.0"]
solana = ["solders>=0.21.0", "base58>=2.1.0", "httpx>=0.27.0"]
all = ["httpx>=0.27.0", "beautifulsoup4>=4.12.0", "mcp>=1.0.0", "solders>=0.21.0", "base58>=2.1.0"]

[project.scripts]
claude1 = "claude1.cli:cli"

[tool.setuptools.packages.find]
include = ["claude1", "claude1.*"]
